# car_work

./: .gitignore  CMakeLists.txt  README.md
src/: SmartCar.cpp  SmartCar.hpp  icar.cpp
src/config/: CarConfig.cpp  CarConfig.hpp  ai.json  camera.json  motion.json  ring.json
src/control/: Control.cpp  Control.h  ControlCal.cpp  ControlCal.h  FuzzyControl.cpp  FuzzyControl.h
src/detection/: BridageDetection.cpp  BridageDetection.h  DangerDetection.cpp  DangerDetection.h  ParkingDetection.cpp  ParkingDetection.h  RacingDetection.cpp  RacingDetection.h  RescueDetection.cpp  RescueDetection.h  RingDetection.cpp  RingDetection.h
src/driver/: camera_decoder.cpp  camera_decoder.h  camera_driver.cpp  camera_driver.h  uart.hpp
src/element/: CrossElement.cpp  CrossElement.h  Findline.cpp  Findline.h  RingElement.cpp  RingElement.h
src/include/: common.hpp  detection.hpp  stop_watch.hpp
src/tool/: camera.cpp  img2video.cpp
src/utils/: IcarShow.h  Icarshow.cpp  Logger.hpp  SingletonHolder.hpp  ThreadUtil.hpp  algorithm.cpp  algorithm.h  videorecord.hpp
src/vision/: AiProcess.cpp  AiProcess.h  ImageCapture.cpp  ImageCapture.h  ImageProcess.cpp  ImageProcess.h  mapping.cpp  mapping.h
test/: main.cpp  old_code_test.cpp
